--- a/sender.html
+++ b/sender.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <!-- <video id="localVideo" autoplay playsinline></video> -->
-    <script src="https://cdn.jsdelivr.net/npm/socket.io-client/dist/socket.io.min.js"></script>
+    <script src="./socketIO.min.js"></script>
     <script>
         const socket = io('http://localhost:5001');
         /* const localVideo = document.getElementById('localVideo'); */
